--- a/build.gradle
+++ b/build.gradle
@@ -108,10 +108,10 @@ publishing {
 //        }
         maven {
             name = "GitHubPackages"
-            url = uri("https://maven.pkg.github.com/kociumba/imgui-mc")
+            url = uri("https://maven.pkg.github.com/Chest-Solutions/imgui-mc")
             credentials {
-                username "${System.getenv("GITHUB_ACTOR")}"
-                password "${System.getenv("GITHUB_TOKEN")}"
+                username = project.findProperty("gpr.user") ?: System.getenv("GITHUB_ACTOR")
+                password = project.findProperty("gpr.key") ?: System.getenv("GITHUB_TOKEN")
             }
         }
     }
